[DMAAP-DR] Upgrade DataRouter to java 17
Change-Id: I82fb919be9abd9a3110dfdd96ee43576de069e76
Issue-ID: DMAAP-1895
Signed-off-by: david.mcweeney <david.mcweeney@est.tech>